<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_Cylinder" Id="{84ff1c9d-387b-40dd-9e52-4cc6c2a7141b}" SpecialFunc="None">
    <Declaration><![CDATA[(*	This FB is used for a single output solenoid 
	It uses the times to say when Extended/Retracted  	
	It starts assuming retracted and the output off.
*)
FUNCTION_BLOCK FB_Cylinder EXTENDS FB_ComponentBase IMPLEMENTS I_Cylinder
VAR
    //Output
    Output AT %Q* : BOOL;

    // Internal variables
    _ExtendRequest  : BOOL;
    _RetractRequest : BOOL;
    _Extended       : BOOL;
    _Retracted      : BOOL;
    _Extending      : BOOL;
    _Retracting     : BOOL;
    _ExtendTime     : LREAL := 1000; // Default time 1s
    _RetractTime    : LREAL := 1000; // Default time 1s

    // Timer for Extend/Retract
    Extend_TON    : TON;
    Retract_TON   : TON;
    Extend_RTRIG  : R_TRIG;
    Retract_RTRIG : R_TRIG;

    //HMI 
    Cylinder_HMI : ST_Cylinder_HMI;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Folder Name="I_ComponentBase" Id="{e900dbc5-9017-4064-a6b0-a05c299109c2}" />
    <Folder Name="I_CyclicFB" Id="{87f3c6d4-cb40-4245-81e3-67a825349a0c}" />
    <Folder Name="I_Cylinder" Id="{a6abc6f1-77cd-427b-933b-effa0f25b0db}" />
    <Method Name="CreateEvents" Id="{3e5b5b40-936d-40ba-aba9-afaf2438d26e}" FolderPath="I_ComponentBase\">
      <Declaration><![CDATA[METHOD PROTECTED CreateEvents
VAR_INPUT
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[SUPER^.CreateEvents();]]></ST>
      </Implementation>
    </Method>
    <Method Name="CyclicLogic" Id="{5c1b5fa3-af8d-4464-9679-0f6e0bdf420f}" FolderPath="I_CyclicFB\">
      <Declaration><![CDATA[METHOD CyclicLogic]]></Declaration>
      <Implementation>
        <ST><![CDATA[//One shot the requests
Extend_RTRIG(CLK := _ExtendRequest);
Retract_RTRIG(CLK := _RetractRequest);

//Handle Extend
IF Extend_RTRIG.Q THEN
    Output          := TRUE;
    _Extending      := TRUE;
    _Retracting     := FALSE;
    _Retracted      := FALSE;
    _RetractRequest := FALSE;
END_IF

//Handle Retract
IF Retract_RTRIG.Q THEN
    Output         := FALSE;
    _Extending     := FALSE;
    _Retracting    := TRUE;
    _Extended      := FALSE;
    _ExtendRequest := FALSE;
END_IF

//Handle the time to Extend/Retract
Extend_TON(IN := _Extending, PT := LREAL_TO_TIME(_ExtendTime));
Retract_TON(IN := _Retracting, PT := LREAL_TO_TIME(_RetractTime));
IF Extend_TON.Q THEN
    _Extended  := TRUE;
    _Extending := FALSE;
END_IF

IF Retract_TON.Q THEN
    _Retracted  := TRUE;
    _Retracting := FALSE;
END_IF

SUPER^.CyclicLogic();]]></ST>
      </Implementation>
    </Method>
    <Method Name="Extend" Id="{f76b6140-af7b-4e84-89e2-4088b7535499}" FolderPath="I_Cylinder\">
      <Declaration><![CDATA[METHOD Extend]]></Declaration>
      <Implementation>
        <ST><![CDATA[_ExtendRequest  := TRUE;
_RetractRequest := FALSE;]]></ST>
      </Implementation>
    </Method>
    <Property Name="Extended" Id="{0b637275-f326-40fc-9e85-9bc95eea83ca}" FolderPath="I_Cylinder\">
      <Declaration><![CDATA[PROPERTY Extended : BOOL]]></Declaration>
      <Get Name="Get" Id="{0461fe63-f86f-44be-aaa4-3be89e903078}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[Extended := _Extended;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="ExtendTime" Id="{e2dcc71a-7531-40a4-928f-f19b69a1fb32}" FolderPath="I_Cylinder\">
      <Declaration><![CDATA[PROPERTY ExtendTime : LREAL]]></Declaration>
      <Get Name="Get" Id="{0b001083-9d94-4ade-8f8e-cfb190c4a6ef}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[ExtendTime := _ExtendTime;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{776c832f-beb9-4f81-a446-99e1808f8b74}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Method Name="HMICommunication" Id="{ecf4504c-d862-48e6-991f-2e1997844380}" FolderPath="I_ComponentBase\">
      <Declaration><![CDATA[METHOD PROTECTED HMICommunication
VAR_INPUT
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[SUPER^.HMICommunication();

//Handle the requests to extend and retract
IF ComponentBase_HMI.Status.HMIControlAvailable THEN
    IF Cylinder_HMI.Command.Extend THEN
        Extend();
    ELSIF Cylinder_HMI.Command.Retract THEN
        Retract();
    END_IF
END_IF

//Update HMI status info
Cylinder_HMI.Status.Extended    := _Extended;
Cylinder_HMI.Status.Extending   := _Extending;
Cylinder_HMI.Status.Retracted   := _Retracted;
Cylinder_HMI.Status.Retracting  := _Retracting;
Cylinder_HMI.Config.ExtendTime  := _ExtendTime;
Cylinder_HMI.Config.RetractTime := _RetractTime;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Initialize" Id="{87e9fdf5-09e8-42e1-9c25-a88a111319f8}">
      <Declaration><![CDATA[//! @summary Basic component initialization logic
METHOD PROTECTED Initialize : BOOL;

//! @description This method is called by <c>CyclicLogic()</c> as required]]></Declaration>
      <Implementation>
        <ST><![CDATA[//Set the cylinder to retracted
IF Output THEN
    _Extended  := TRUE;
    _Retracted := FALSE;
ELSE
    _Extended  := FALSE;
    _Retracted := TRUE;
END_IF

_Extending      := FALSE;
_ExtendRequest  := FALSE;
_Retracting     := FALSE;
_RetractRequest := FALSE;

//Call base class Initialize
Initialize := SUPER^.Initialize();]]></ST>
      </Implementation>
    </Method>
    <Method Name="Monitoring" Id="{9843f90f-d434-4d6f-8841-844359423366}" FolderPath="I_ComponentBase\">
      <Declaration><![CDATA[METHOD PROTECTED Monitoring
VAR_INPUT
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[_Busy    := _Extending OR _Retracting;
_Error   := FALSE;
_ErrorID := 0;
SUPER^.Monitoring();]]></ST>
      </Implementation>
    </Method>
    <Method Name="Retract" Id="{62f4be5a-2417-454d-83fa-0301d008b1f8}" FolderPath="I_Cylinder\">
      <Declaration><![CDATA[METHOD Retract]]></Declaration>
      <Implementation>
        <ST><![CDATA[_ExtendRequest  := FALSE;
_RetractRequest := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Property Name="Retracted" Id="{6d4508b6-aaa4-44e0-b03b-568180b910d9}" FolderPath="I_Cylinder\">
      <Declaration><![CDATA[PROPERTY Retracted : BOOL]]></Declaration>
      <Get Name="Get" Id="{c858b548-e496-44d8-871e-eecca4d05383}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[Retracted := _Retracted;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="RetractTime" Id="{e14f84fd-065d-441b-b8bd-492d5e46847d}" FolderPath="I_Cylinder\">
      <Declaration><![CDATA[PROPERTY RetractTime : LREAL]]></Declaration>
      <Get Name="Get" Id="{04369b4b-f6ef-486b-bf2c-c677ad5bd77a}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[RetractTime := _RetractTime;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{8b666dbf-e9ab-4b6d-a120-fcb12ea4f469}">
        <Declaration><![CDATA[VAR
END_VAR]]></Declaration>
        <Implementation>
          <ST><![CDATA[_RetractTime := RetractTime;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <LineIds Name="FB_Cylinder">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_Cylinder.CreateEvents">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Cylinder.CyclicLogic">
      <LineId Id="156" Count="34" />
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Cylinder.Extend">
      <LineId Id="10" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Cylinder.Extended.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Cylinder.ExtendTime.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Cylinder.ExtendTime.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Cylinder.HMICommunication">
      <LineId Id="117" Count="16" />
      <LineId Id="22" Count="0" />
    </LineIds>
    <LineIds Name="FB_Cylinder.Initialize">
      <LineId Id="120" Count="14" />
      <LineId Id="6" Count="0" />
    </LineIds>
    <LineIds Name="FB_Cylinder.Monitoring">
      <LineId Id="37" Count="2" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_Cylinder.Retract">
      <LineId Id="9" Count="0" />
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="FB_Cylinder.Retracted.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Cylinder.RetractTime.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_Cylinder.RetractTime.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>